--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Mala06-del.github.io/br-React",
+  "homepage": "https://Mala06-del.github.io/Brills-react",
   "name": "reactproject",
   "version": "0.1.0",
   "private": true,
